--- a/css/cadastro-perfil.css
+++ b/css/cadastro-perfil.css
@@ -38,7 +38,7 @@
    height: 35px;
 }
 
-#container-button-continuar {
+#container-button-cadastrar {
    width: 100%;
    height: 70px;
    display: flex;
@@ -47,7 +47,7 @@
    padding-right: 140px;
 }
 
-#bto-continuar {
+#bto-cadastrar {
    width: 380px;
    height: 100px;
    font-size: 30px;
